--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26638,3 +26638,6 @@ body.tmp-white-version.color-primary-3rd .services-widget.v2 .active-bg {
   display: flex;
   flex-direction: row;
 }
+.data-list li{
+  list-style: disc;
+}
