--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -53,3 +53,9 @@ padding: 20px;
 .data-list{
     list-style:decimal;
 }
+.hero-img{
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1;
+}
